public_html/style.css
body {
    background-color: white;
    color: black;
}

nav {
    background-color: black;
}


#landing-wrapper {
    background-image: linear-gradient(rgba(90, 90, 90, 0.5), rgba(90, 90, 90, 0.5)), url("documentation/images/main-background-cropped.jpg");
    background-position: left 50%;
    background-size: cover;
    padding: 4rem 0 4rem 0;
}

/*jumbotron image column*/
main div :nth-child(2) {
    text-align: center;
    margin: 0 2rem 0 0;
}

/*Mariposa Beauty column*/
main div :first-child {
    margin: 0 0 0 auto;
}

/*Mariposa Beauty text*/
main div div :first-child {
    color: white;
    text-align: left;
    margin-left: 1rem;
}

#about-me-row {
    text-align: center;
}

#about-me-container {
   padding: 3rem 0 3rem 0;
}

#portfolio-container {
    background-image:  linear-gradient(rgba(233, 233, 233, 0.3), rgba(233, 233, 233, 0.3)),url("documentation/images/portfolio-bg.jpg");
    background-size: cover;
    background-position-y: 35%;
    padding: 2rem;
}

.portfolio-img {
    padding: 1rem 1rem 1rem 1rem;
}

#contact-form-container {
    margin: 4rem auto 4rem auto;
    align-content: center;
}

#contact-form-only {
    background-color: darkgrey;
    border-radius: 20px;
}

.information {
    padding: 8px 0 8px 0;
}

.form-wrapper {
    padding: 20px 10px 20px 10px;
}

#form-button {
}

footer {
    background-color: black;
    padding: 10px 0 10px 0;
    display: block;
    border: white;
}

.footer-img {

}

